--- a/react-client/package.json
+++ b/react-client/package.json
@@ -1,23 +1,24 @@
 {
   "name": "sd-poc",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
-    "webpack": "^1.12.8",
-    "babel-polyfill": "^6.2.0",
+    "autoprefixer-loader": "^3.1.0",
     "babel-core": "^6.2.1",
     "babel-loader": "^6.2.0",
+    "babel-polyfill": "^6.2.0",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
     "css-loader": "^0.23.0",
-    "style-loader": "^0.13.0",
-    "url-loader": "^0.5.6",
     "file-loader": "^0.8.4",
-    "autoprefixer-loader": "^3.1.0",
+    "history": "^1.13.1",
     "imports-loader": "^0.6.5",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
+    "react-redux": "^4.0.0",
     "react-router": "^1.0.0",
-    "history": "^1.13.1"
+    "redux": "^3.0.4",
+    "style-loader": "^0.13.0",
+    "url-loader": "^0.5.6",
+    "webpack": "^1.12.8"
   }
 }
