--- a/react-client/package.json
+++ b/react-client/package.json
@@ -13,6 +13,8 @@
     "history": "^1.13.1",
     "imports-loader": "^0.6.5",
     "react": "^0.14.3",
+    "react-dnd": "^2.0.2",
+    "react-dnd-html5-backend": "^2.0.0",
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.0",
     "react-router": "^1.0.0",
