--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "sd-poc",
+  "name": "estimator",
   "dependencies": {},
   "devDependencies": {
-    "autobahn": "^0.9.8",
-    "autoprefixer-loader": "^3.1.0",
-    "babel-core": "^6.2.1",
-    "babel-loader": "^6.2.0",
-    "babel-polyfill": "^6.2.0",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-react": "^6.1.18",
-    "css-loader": "^0.23.0",
-    "file-loader": "^0.8.4",
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.5",
+    "autobahn-browser": "^20.9.2",
+    "autoprefixer": "^10.0.2",
+    "babel-loader": "^8.2.1",
+    "buffer": "^6.0.2",
+    "css-loader": "^5.0.1",
+    "file-loader": "^6.2.0",
     "history": "^1.13.1",
-    "imports-loader": "^0.6.5",
+    "imports-loader": "^1.2.0",
     "json-loader": "^0.5.4",
+    "postcss-loader": "^4.0.4",
     "react": "^0.14.3",
     "react-dnd": "^2.0.2",
     "react-dnd-html5-backend": "^2.0.0",
@@ -23,13 +24,18 @@
     "redux": "^3.0.4",
     "redux-logger": "^2.1.4",
     "redux-thunk": "^1.0.0",
-    "style-loader": "^0.13.0",
-    "url-loader": "^0.5.6",
-    "uuid": "^2.0.1",
-    "webpack": "^1.12.8",
+    "style-loader": "^2.0.0",
+    "url-loader": "^4.1.1",
+    "uuid": "^8.3.1",
+    "webpack": "^5.4.0",
+    "webpack-cli": "^4.2.0",
     "when": "^3.7.5"
   },
   "scripts": {
-    "build": "webpack --colors --config"
-  }
+    "build": "webpack"
+  },
+  "browserslist": [
+    "last 2 Chrome versions",
+    "last 2 iOS major versions"
+  ]
 }
