--- a/package.json
+++ b/package.json
@@ -11,19 +11,19 @@
     "buffer": "^6.0.2",
     "css-loader": "^5.0.1",
     "file-loader": "^6.2.0",
-    "history": "^1.13.1",
+    "history": "^5.0.0",
     "imports-loader": "^1.2.0",
     "json-loader": "^0.5.4",
     "postcss-loader": "^4.0.4",
-    "react": "^0.14.3",
-    "react-dnd": "^2.0.2",
-    "react-dnd-html5-backend": "^2.0.0",
-    "react-dom": "^0.14.3",
-    "react-redux": "^4.0.0",
-    "react-router": "^1.0.0",
-    "redux": "^3.0.4",
-    "redux-logger": "^2.1.4",
-    "redux-thunk": "^1.0.0",
+    "react": "^17.0.1",
+    "react-dnd": "^11.1.3",
+    "react-dnd-html5-backend": "^11.1.3",
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "react-router": "^5.2.0",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "style-loader": "^2.0.0",
     "url-loader": "^4.1.1",
     "uuid": "^8.3.1",
@@ -32,7 +32,8 @@
     "when": "^3.7.5"
   },
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "dev": "webpack --watch"
   },
   "browserslist": [
     "last 2 Chrome versions",
