--- a/package.json
+++ b/package.json
@@ -1,39 +1,50 @@
 {
   "name": "estimator",
-  "dependencies": {},
-  "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/preset-env": "^7.12.1",
-    "@babel/preset-react": "^7.12.5",
+  "dependencies": {
     "autobahn-browser": "^20.9.2",
-    "autoprefixer": "^10.0.2",
-    "babel-loader": "^8.2.1",
-    "buffer": "^6.0.2",
-    "css-loader": "^5.0.1",
-    "file-loader": "^6.2.0",
-    "history": "^5.0.0",
-    "imports-loader": "^1.2.0",
-    "json-loader": "^0.5.4",
-    "postcss-loader": "^4.0.4",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dnd": "^11.1.3",
     "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
-    "react-router": "^5.2.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "uuid": "^8.3.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.5",
+    "autoprefixer": "^10.0.2",
+    "babel-loader": "^8.2.1",
+    "buffer": "^6.0.2",
+    "css-loader": "^5.0.1",
+    "eslint": "7.2.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-import-resolver-webpack": "^0.13.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "4.0.0",
+    "file-loader": "^6.2.0",
+    "history": "^5.0.0",
+    "imports-loader": "^1.2.0",
+    "json-loader": "^0.5.4",
+    "postcss-loader": "^4.0.4",
+    "react-router": "^5.2.0",
     "style-loader": "^2.0.0",
     "url-loader": "^4.1.1",
-    "uuid": "^8.3.1",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.2.0",
     "when": "^3.7.5"
   },
   "scripts": {
     "build": "webpack",
-    "dev": "webpack --watch"
+    "dev": "webpack --watch",
+    "lint": "eslint src",
+    "lint:fix": "eslint --fix src"
   },
   "browserslist": [
     "last 2 Chrome versions",
