--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "autoprefixer": "^10.0.2",
     "babel-loader": "^8.2.1",
     "buffer": "^6.0.2",
+    "copy-webpack-plugin": "^6.3.2",
     "css-loader": "^5.0.1",
     "eslint": "7.2.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -29,6 +30,7 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "4.0.0",
     "file-loader": "^6.2.0",
+    "gh-pages": "^3.1.0",
     "history": "^5.0.0",
     "imports-loader": "^1.2.0",
     "json-loader": "^0.5.4",
@@ -44,7 +46,8 @@
     "build": "webpack",
     "dev": "webpack --watch",
     "lint": "eslint src",
-    "lint:fix": "eslint --fix src"
+    "lint:fix": "eslint --fix src",
+    "deploy": "yarn build && gh-pages -d build"
   },
   "browserslist": [
     "last 2 Chrome versions",
